--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -226,6 +226,12 @@
                                     <td scope="col" class="col-sm-3">Empty Bottle</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.com/event/cloud-nothings-10-years-of-empty-bottle-tickets/13706693?pl=eb&irgwc=1&clickid=33jzAuz-3xyKRa30qrT6uyWVUkCxiMStgWbyyo0&camefrom=CFC_BUYAT_219208&impradid=219208&REFERRAL_ID=tmfeedbuyat219208&wt.mc_id=aff_BUYAT_219208&utm_source=219208-Bandsintown&impradname=Bandsintown&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
                                     </tr>
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Rise Against</td>
+                                    </tr>
                                 </tbody>                         
                         </table>
                     </div>
@@ -351,7 +357,13 @@
                                     <td scope="col" class="col-sm-3">Bordeaux, FR</td>
                                     <td scope="col" class="col-sm-3">Krakatoa</td>
                                     <td scope="col" class="col-sm-3"><a href="https://krakatoa.org/agenda/john-nerves-cosmopaark?fbclid=IwZXh0bgNhZW0CMTAAAR0z_ktGVDUktxtwrOl_v30fXldzvzKkHMzvTTB75zBukO16bEkeYGHTGKw_aem_9wU3RuWtLDAmZLcZzl6aaA" target="_blank">Link</a></td>
-                                    </tr>                                  
+                                    </tr>            
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Idles</td>
+                                    </tr>                      
                             </tbody>
                         </table>
                     </div>
@@ -517,7 +529,13 @@
                                     <td scope="col" class="col-sm-3">Manchester, UK</td>
                                     <td scope="col" class="col-sm-3">Manchester Psych Fest</td>
                                     <td scope="col" class="col-sm-3"><a href="https://dice.fm/event/366bg-manchester-psych-fest-2024-31st-aug-various-venues-manchester-manchester-canvas-manchester-tickets?cid1=&cid2=41386706&pid=f5e6ac52&_branch_match_id=1211309051164893202&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1Y9MtUxOsTAySDM2trRPzkwxsjUxNLYwMzcwUyvITLFNM001S0w2NQIAEID5RTwAAAA%3D" target="_blank">Link</a></td>
-                                    </tr>           
+                                    </tr>         
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Amyl & The Sniffers</td>
+                                    </tr>  
                             </tbody>
                         </table>
                      </div>
@@ -747,31 +765,31 @@
                             </thead>
                             <tbody>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Jul 23, 2024</td>
+                                    <td scope="col" class="col-sm-3">Jul 23, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Richmond, VA</td>
                                     <td scope="col" class="col-sm-3">The Canal Club</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.seetickets.us/event/mary-timony-at-canal-club/586703" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Jul 25, 2024</td>
+                                    <td scope="col" class="col-sm-3">Jul 25, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Chattanooga, TN</td>
                                     <td scope="col" class="col-sm-3">JJ’s Bohemia</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.bandsintown.com/artist-rsvp/2072222?event_id=105212921&utm_campaign=event&utm_medium=api&app_id=squarespace-magnolia-silver&utm_source=public_api&came_from=267&spn=0&signature=ZZf9e19b147ca1cbdad1282c230b3e65dc2ad63f6db607d7a01e983f85b6cae8a5" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Jul 26, 2024</td>
+                                    <td scope="col" class="col-sm-3">Jul 26, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Nashville, TN</td>
                                     <td scope="col" class="col-sm-3">The Blue Room</td>
                                     <td scope="col" class="col-sm-3"><a href="https://dice.fm/event/2qvvp-mary-timony-w-speedy-ortiz-26th-jul-the-blue-room-nashville-tickets?pid=530cb286&_branch_match_id=1211309051164893202&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1fcyTzZLSUmxtDQ3TbMvyEyxNTU2SE4ysjADAGRftu0uAAAA" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Jul 27, 2024</td>
+                                    <td scope="col" class="col-sm-3">Jul 27, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Atlanta, GA</td>
                                     <td scope="col" class="col-sm-3">The Earl</td>
                                     <td scope="col" class="col-sm-3"><a href="https://badearl.freshtix.com/events/mary-timony-the-earl?utm_campaign=bit&utm_medium=referral&utm_source=bandsintown" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Jul 28, 2024</td>
+                                    <td scope="col" class="col-sm-3">Jul 28, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Asheville, NC</td>
                                     <td scope="col" class="col-sm-3">Eulogy</td>
                                     <td scope="col" class="col-sm-3"><a href="https://dice.fm/event/ddbke-mary-timony-28th-jul-eulogy-asheville-tickets?pid=530cb286&_branch_match_id=1211309051164893202&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1Xc3NksySEs1Tkkys7AvyEyxNTU2SE4ysjADALRwE%2BMuAAAA" target="_blank">Link</a></td>
@@ -781,7 +799,13 @@
                                     <td scope="col" class="col-sm-3">Philadelphia, PA</td>
                                     <td scope="col" class="col-sm-3">MilkBoy</td>
                                     <td scope="col" class="col-sm-3"><a href="https://wl.seetickets.us/event/speedy-ortiz/590786?afflky=MilkBoy" target="_blank">Link</a></td>
-                                    </tr>                                    
+                                    </tr>         
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Mary Timony</td>
+                                    </tr>                           
                             </tbody>
                         </table>
                     </div>
