--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -289,22 +289,70 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td scope="col" class="col-sm-3">Apr 19, 2024</td>
-                                    <td scope="col" class="col-sm-3">Nashville, TN</td>
-                                    <td scope="col" class="col-sm-3">DRKMTTR Collective</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://app.opendate.io/e/j-robbins-band-april-19-2024-524112" target="_blank">Link</a></td>
+                                    <td scope="col" class="col-sm-3">Sep 7, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Northampton, MA</td>
+                                    <td scope="col" class="col-sm-3">The Iron Horse</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://www.tixr.com/groups/dspshows/events/bob-mould-solo-electric-108206" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Apr 21, 2024</td>
-                                    <td scope="col" class="col-sm-3">Morgantown, WV</td>
-                                    <td scope="col" class="col-sm-3">123 Pleasant Street</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://www.showclix.com/event/jrobbins123" target="_blank">Link</a></td>
+                                    <td scope="col" class="col-sm-3">Sep 8, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Portsmouth, NH</td>
+                                    <td scope="col" class="col-sm-3">3S Artspace</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://www.eventbrite.com/e/bob-mould-solo-electric-w-j-robbins-tickets-926203959977?aff=aff0bandsintown&bit_userid=$%7Buser_id%7D&appId=wf_obozbhyq.pbz&comeFrom=242&artist_event_id=105659830" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">May 25, 2024</td>
-                                    <td scope="col" class="col-sm-3">Westminster, MD</td>
-                                    <td scope="col" class="col-sm-3">The Carroll Arts Center</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://carrollartscenter.my.salesforce-sites.com/ticket/#/instances/a0F6T00000vpI4OUAU" target="_blank">Link</a></td>
+                                    <td scope="col" class="col-sm-3">Sep 10, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Fall River, MA</td>
+                                    <td scope="col" class="col-sm-3">Narrows Center For The Arts</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://narrowscenter.showare.com/eventperformances.asp?evt=41" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Sep 11, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Old Saybrook, CT</td>
+                                    <td scope="col" class="col-sm-3">Katharine Hepburn Cultural Arts Center</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://www.thekate.org/event/bob-mould-solo-electric/" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Sep 13, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">South Orange, NJ</td>
+                                    <td scope="col" class="col-sm-3">South Orange Performing Arts Center</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://www.sopacnow.org/events/bob-mould-2024/" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Sep 14, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Elkton, MD</td>
+                                    <td scope="col" class="col-sm-3">Elkton Music Hall</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://dice.fm/event/7dd3g9-bob-mould-solo-electric-14th-sep-elkton-music-hall-elkton-tickets?pid=530cb286&_branch_match_id=1211309051164893202&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1U8ztUw0t0w1TzQ3t7QvyEyxNTU2SE4ysjADANJjR6AuAAAA" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Sep 15, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Bethlehem, PA</td>
+                                    <td scope="col" class="col-sm-3">Musicfest Cafe</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://secure.artsquest.org/Online/default.asp?BOparam::WScontent::loadArticle::permalink=BobMould&BOparam::WScontent::loadArticle::context_id=" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Sep 18, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Ann Arbor, MI</td>
+                                    <td scope="col" class="col-sm-3">The Ark</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://mutotix.umich.edu/5039/5040?queueittoken=e_commencement2023~q_00000000-0000-0000-0000-000000000000~ts_1720707347~ce_true~rt_disabled~h_49dce54cc8af063202eabba675165ac45120d22353b497eedc0844fdc1e5a84d" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Oct 18, 2024 #</td>
+                                    <td scope="col" class="col-sm-3">Los Angeles, CA</td>
+                                    <td scope="col" class="col-sm-3">The Belasco</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://concerts.livenation.com/sunny-day-real-estate-diary-30th-los-angeles-california-10-18-2024/event/09006032D7C84711?irgwc=1&clickid=33jzAuz-3xyKRa30qrT6uyWVUkCxidytgWbyyo0&camefrom=CFC_BUYAT_219208&impradid=219208&REFERRAL_ID=tmfeedbuyat219208&wt.mc_id=aff_BUYAT_219208&utm_source=219208-Bandsintown&impradname=Bandsintown&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                    <td scope="col" class="col-sm-3">Oct 19, 2024 #</td>
+                                    <td scope="col" class="col-sm-3">Los Angeles, CA</td>
+                                    <td scope="col" class="col-sm-3">The Belasco</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://concerts.livenation.com/sunny-day-real-estate-diary-30th-los-angeles-california-10-19-2024/event/0900603A8C8C2358?irgwc=1&clickid=33jzAuz-3xyKRa30qrT6uyWVUkCxidQhgWbyyo0&camefrom=CFC_BUYAT_5128861&impradid=5128861&REFERRAL_ID=tmfeedbuyat5128861&wt.mc_id=aff_BUYAT_5128861&utm_source=5128861-Google%20Events&impradname=Google%20Events&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"># with Sunny Day Real Estate</td>
+                                        <td scope="col" class="col-sm-3">+ with Bob Mould</td>
                                     </tr>
                             </tbody>
                         </table>
