--- a/public/tour.css
+++ b/public/tour.css
@@ -98,6 +98,10 @@ td > a:hover {
     margin-top: 0;
 }
 
+.butcher-table {
+    margin-top: 0;
+}
+
 .no-dates-robbins {
     display: none;
 }
@@ -160,6 +164,10 @@ td > a:hover {
     }
 
     .sea-table {
+        margin-top: 0;
+    }
+
+    .butcher-table {
         margin-top: 0;
     }
 }
