--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -438,6 +438,12 @@
                                     <td scope="col" class="col-sm-3">Los Angeles, CA</td>
                                     <td scope="col" class="col-sm-3">The Fonda Theatre</td>
                                     <td scope="col" class="col-sm-3"><a href="https://go.seated.com/tour-events/3adbb3ea-e484-42b9-ab10-3cba0d17065d" target="_blank">Link</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Julie</td>
                                     </tr>      
                             </tbody>
                         </table>
@@ -595,13 +601,7 @@
                                     <td scope="col" class="col-sm-3">Bordeaux, FR</td>
                                     <td scope="col" class="col-sm-3">Krakatoa</td>
                                     <td scope="col" class="col-sm-3"><a href="https://krakatoa.org/agenda/john-nerves-cosmopaark?fbclid=IwZXh0bgNhZW0CMTAAAR0z_ktGVDUktxtwrOl_v30fXldzvzKkHMzvTTB75zBukO16bEkeYGHTGKw_aem_9wU3RuWtLDAmZLcZzl6aaA" target="_blank">Link</a></td>
-                                    </tr>            
-                                    <tr>
-                                        <td scope="col" class="col-sm-3"></td>
-                                        <td scope="col" class="col-sm-3"></td>
-                                        <td scope="col" class="col-sm-3"></td>
-                                        <td scope="col" class="col-sm-3">+ with Idles</td>
-                                    </tr>                      
+                                    </tr>                            
                             </tbody>
                         </table>
                     </div>
@@ -689,18 +689,6 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td scope="col" class="col-sm-3">Aug 3, 2024</td>
-                                    <td scope="col" class="col-sm-3">Happy Valley, OR</td>
-                                    <td scope="col" class="col-sm-3">Pickathon</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://www.bandsintown.com/t/105320893?came_from=2890&user_id=31932125&app_id=ggl_feed&utm_medium=web&utm_source=artist_event_page&utm_campaign=ticket_event&ticket_id=1941970122" target="_blank">Link</a></td>
-                                    </tr>
-                                    <tr>
-                                    <td scope="col" class="col-sm-3">Aug 4, 2024</td>
-                                    <td scope="col" class="col-sm-3">Happy Valley, OR</td>
-                                    <td scope="col" class="col-sm-3">Pickathon</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://pickathon.com/tickets/" target="_blank">Link</a></td>
-                                    </tr>
                                     <tr>
                                     <td scope="col" class="col-sm-3">Aug 28, 2024</td>
                                     <td scope="col" class="col-sm-3">Amsterdam, NL</td>
