--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -376,7 +376,7 @@
                                     <tr>
                                     <td scope="col" class="col-sm-3">Oct 30, 2024+</td>
                                     <td scope="col" class="col-sm-3">Houston, TX</td>
-                                    <td scope="col" class="col-sm-3">White Oak Music Hall</td>
+                                    <td scope="col" class="col-sm-3">White Oak Music Hall Downstairs</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.ticketmaster.com/event/3A0060EB9A8E295D?irgwc=1&clickid=2BpRZ41JxxyKTU5090Q2P1SNUkCwT0R9gWbRxk0&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&utm_source=1387536-Seated&impradname=Seated&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
@@ -513,11 +513,17 @@
                             </thead>
                             <tbody>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Oct 11, 2024</td>
+                                    <td scope="col" class="col-sm-3">Oct 11, 2024 +</td>
                                     <td scope="col" class="col-sm-3">Bordeaux, FR</td>
                                     <td scope="col" class="col-sm-3">Krakatoa</td>
                                     <td scope="col" class="col-sm-3"><a href="https://krakatoa.org/agenda/john-nerves-cosmopaark?fbclid=IwZXh0bgNhZW0CMTAAAR0z_ktGVDUktxtwrOl_v30fXldzvzKkHMzvTTB75zBukO16bEkeYGHTGKw_aem_9wU3RuWtLDAmZLcZzl6aaA" target="_blank">Link</a></td>
-                                    </tr>                            
+                                    </tr>
+                                    <tr>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3"></td>
+                                        <td scope="col" class="col-sm-3">+ with Nerves and Cosmopaark</td>
+                                    </tr>                           
                             </tbody>
                         </table>
                     </div>
@@ -984,14 +990,14 @@
                                     <tr>
                                     <td scope="col" class="col-sm-3">Oct 4, 2024</td>
                                     <td scope="col" class="col-sm-3">Essen, DE</td>
-                                    <td scope="col" class="col-sm-3">Zinnober Festival</td>
+                                    <td scope="col" class="col-sm-3">Zinnober Festival at Delta Music Park</td>
                                     <td scope="col" class="col-sm-3"><a href="https://zinnober.ticket.io/3xrzed60/?" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
                                     <td scope="col" class="col-sm-3">Nov 29, 2024 +</td>
                                     <td scope="col" class="col-sm-3">London, UK</td>
                                     <td scope="col" class="col-sm-3">Alexandra Palace Park</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://www.alexandrapalace.com/whats-on/idles-2/" target="_blank">Link</a></td>
+                                    <td scope="col" class="col-sm-3">Sold Out</td>
                                     </tr>
                                     
                                     <tr>
@@ -1172,7 +1178,7 @@
                                     <tr>
                                     <td scope="col" class="col-sm-3">Nov 10, 2024</td>
                                     <td scope="col" class="col-sm-3">São Paulo, BR</td>
-                                    <td scope="col" class="col-sm-3">Balaclava Festival</td>
+                                    <td scope="col" class="col-sm-3">Balaclava Festival at Tokio Marine Hall</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.ingresse.com/balaclavafest24/?language=en_us#" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
