--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -1112,12 +1112,6 @@
                             </thead>
                             <tbody>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Sep 23, 2024 +</td>
-                                    <td scope="col" class="col-sm-3">Austin, TX</td>
-                                    <td scope="col" class="col-sm-3">Emo’s Austin</td>
-                                    <td scope="col" class="col-sm-3"><a href="https://concerts.livenation.com/silversun-pickups-austin-texas-09-23-2024/event/3A0060F1B4014E5E?irgwc=1&clickid=TLBVBX1IYxyKTU5090Q2P1SNUkCwhi2JgWbRxk0&camefrom=CFC_BUYAT_219208&impradid=219208&REFERRAL_ID=tmfeedbuyat219208&wt.mc_id=aff_BUYAT_219208&impradname=Bandsintown&ircid=4272" target="_blank">Link</a></td>
-                                    </tr>
-                                    <tr>
                                     <td scope="col" class="col-sm-3">Sep 24, 2024 +</td>
                                     <td scope="col" class="col-sm-3">San Antonio, TX</td>
                                     <td scope="col" class="col-sm-3">Aztec Theatre</td>
@@ -1142,11 +1136,17 @@
                                     <td scope="col" class="col-sm-3"><a href="https://www.prekindle.com/event/21387-silversun-pickups-fayetteville" target="_blank">Link</a></td>
                                     </tr>
                                     <tr>
-                                    <td scope="col" class="col-sm-3">Sep 29, 2024 +</td>
+                                    <td scope="col" class="col-sm-3">Sep 29, 2024</td>
                                     <td scope="col" class="col-sm-3">Lexington, KY</td>
                                     <td scope="col" class="col-sm-3">The Burl</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.theburltickets.com//events/buy-tickets/g0228KU2A6v6Yiaip8AC" target="_blank">Link</a></td>
                                     </tr>
+                                    <tr>
+                                        <td scope="col" class="col-sm-3">Oct 18, 2024</td>
+                                        <td scope="col" class="col-sm-3">Richmond, VA</td>
+                                        <td scope="col" class="col-sm-3">Cobra Cabana</td>
+                                        <td scope="col" class="col-sm-3"><a href="https://www.eventbrite.com/e/cobranniversary-6-night-1-speedy-ortiz-snacktruck-ramen-holiday-1018-tickets-1021321258377?aff=aff0bandsintown&bit_userid=${user_id}&appId=fdhnerfcnpr-zntabyvn-fvyire&comeFrom=267&artist_event_id=105958909" target="_blank">Link</a></td>
+                                        </tr>
                                     <tr>
                                         <td scope="col" class="col-sm-3"></td>
                                         <td scope="col" class="col-sm-3"></td>
