--- a/public/tour.css
+++ b/public/tour.css
@@ -114,6 +114,10 @@ td > a:hover {
     margin-top: 0;
 }
 
+.spits-table {
+    margin-top: 0;
+}
+
 .ultra-table {
     margin-top: 0;
 }
@@ -127,6 +131,10 @@ td > a:hover {
 }
 
 .genn-table {
+    margin-top: 0;
+}
+
+.thus-table {
     margin-top: 0;
 }
 
@@ -196,6 +204,10 @@ td > a:hover {
         margin-top: 0;
     }
 
+    .spits-table {
+        margin-top: 0;
+    }
+
     .lambrini-table {
         margin-top: 0;
     }
@@ -221,6 +233,10 @@ td > a:hover {
     }
 
     .butcher-table {
+        margin-top: 0;
+    }
+
+    .thus-table {
         margin-top: 0;
     }
 
