--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -191,25 +191,25 @@
                                 <td scope="col" class="col-sm-3"><a href="https://concerts.livenation.com/tennis-raleigh-north-carolina-06-05-2025/event/2D006247D0CC6CBB?irgwc=1&clickid=U0d2N1SlExyKWqnzdt09GUTKUkswDbXeIXw31c0&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&impradname=Seated&ircid=4272" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
-                                <td scope="col" class="col-sm-3">Jun 6, 2025</td>
+                                <td scope="col" class="col-sm-3">Jun 6, 2025 +</td>
                                 <td scope="col" class="col-sm-3">Atlanta, GA</td>
                                 <td scope="col" class="col-sm-3">The Eastern</td>
                                 <td scope="col" class="col-sm-3"><a href="https://tix.axs.com/xchIGgAAAAAfOXWlAAAAAAAL%2fv%2f%2f%2fwD%2f%2f%2f%2f%2fCVplcm8gTWlsZQD%2f%2f%2f%2f%2f%2f%2f%2f%2f%2fw%3d%3d/shop/search?skin=&tags=&cpch=&cpdate=&cprid=&cpid=&cpcn=&cpdid=&cpdn=&cpsrc=&intoff=&cid=&utm_source=&utm_medium=&utm_campaign=&utm_term=&utm_content=&aff=&clickref=&q=e256c892-510d-4a7f-a480-8008bef03e87&p=5b195619-9a97-4aa2-893c-4e913297faf3&ts=1740696044&c=axs&e=44097760510843449&rt=Safetynet&h=481edbe197732080c909e681a73c3e95" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
-                                <td scope="col" class="col-sm-3">Jun 7, 2025</td>
+                                <td scope="col" class="col-sm-3">Jun 7, 2025 +</td>
                                 <td scope="col" class="col-sm-3">Nashville, TN</td>
                                 <td scope="col" class="col-sm-3">Brooklyn Bowl East</td>
                                 <td scope="col" class="col-sm-3"><a href="https://www.ticketmaster.com/event/1B006244E5205B28?irgwc=1&clickid=U0d2N1SlExyKWqnzdt09GUTKUkswDY0%3AIXw31c0&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&utm_source=1387536-Seated&impradname=Seated&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
-                                <td scope="col" class="col-sm-3">Jun 9, 2025</td>
+                                <td scope="col" class="col-sm-3">Jun 9, 2025 +</td>
                                 <td scope="col" class="col-sm-3">Dallas, TX</td>
                                 <td scope="col" class="col-sm-3">The Factory in Deep Ellum</td>
                                 <td scope="col" class="col-sm-3"><a href="https://tix.axs.com/beB6CQAAAABJXi6WAAAAAAAz%2fv%2f%2f%2fwD%2f%2f%2f%2f%2fEVRoZSBGYWN0b3J5IC0gQUVHAP%2f%2f%2f%2f%2f%2f%2f%2f%2f%2f/shop/search?skin=&tags=&cpch=&cpdate=&cprid=&cpid=&cpcn=&cpdid=&cpdn=&cpsrc=&intoff=&cid=&utm_source=&utm_medium=&utm_campaign=&utm_term=&utm_content=&aff=&clickref=&promocode=&originalReferringURL=https%3A%2F%2Flink.seated.com%2F&upgrade=&mkt_campaign=&irclickid=&q=d1f29486-7604-4a90-8d21-0f18833e7510&p=a18909f9-9e90-4826-a929-e890b89a43d1&ts=1740696083&c=axs&e=1590477899842270&rt=Safetynet&h=89859ca58b1c23f4c557d971c686550e" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
-                                <td scope="col" class="col-sm-3">Jun 10, 2025</td>
+                                <td scope="col" class="col-sm-3">Jun 10, 2025 +</td>
                                 <td scope="col" class="col-sm-3">Houston, TX</td>
                                 <td scope="col" class="col-sm-3">White Oak Music Hall</td>
                                 <td scope="col" class="col-sm-3"><a href="https://www.ticketmaster.com/event/3A006245AE203F66?irgwc=1&clickid=U0d2N1SlExyKWqnzdt09GUTKUkswDY2-IXw31c0&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&utm_source=1387536-Seated&impradname=Seated&utm_medium=affiliate&ircid=4272" target="_blank">Link</a></td>
